--- a/pages/more/xingzuo/xingzuo.wxml
+++ b/pages/more/xingzuo/xingzuo.wxml
@@ -4,7 +4,7 @@
   <view class="xz-container">
       <block wx:for="{{starSigns}}" wx:for-item="star" wx:key="{{key}}">
         <view class="xz-self" catchtap="onStarSignTap" data-starsignid="{{star.starSignId}}">
-          <image class="xz-img" src="{{qiniuyunUrl}}/{{star.xzImgName}}.jpg" data-src="{{qiniuyunUrl}}/{{star.xzImgName}}.jpg" catchtap="viewStarSignImg"></image>
+          <image class="xz-img" src="http://pxuyyeits.bkt.clouddn.com/{{star.xzImgName}}.jpg" data-src="http://pxuyyeits.bkt.clouddn.com/{{star.xzImgName}}.jpg" catchtap="viewStarSignImg"></image>
           <text class="xz-title">{{star.starSignName}}</text>
           <text class="xz-title">{{star.xzMonth}}</text>
         </view>
