--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -21,8 +21,15 @@
 <view class="index">
   <!--<text>点击地名以更换城市</text>-->
   <view class="navigateTitle">城市位置</view>
+
   <view class="bgwrap">
-    <view class="hotcityCommon" style="display:inline;">当前位置: </view>
+    <view class="locationContent">
+      <view class="hotcityCommon" style="display:inline;">当前位置: </view>
+      <view class="thisCityName" bindtap="jump">
+        <icon type="download" size="14" color="#638639" class="changeCity"></icon>
+        <text>更改定位</text>
+      </view>
+    </view>
     <view class="locationContent">
       <block wx:if="{{location == '上海市'}}">
         <image class="locationLogo" src="../../images/img/index/shanghai.png"></image>
@@ -34,34 +41,56 @@
         <image class="locationLogo" src="../../images/img/index/location.png"></image>
       </block>
       <view class="locationDesc">
-        <view class="thisCityName" style="border:none;font-size:50rpx;"><image src="../../images/img/index/position.png"></image>{{location}}{{county}}</view>
-        <view class="thisCityName" bindtap="jump">
-          <icon type="download" size="18" color="#638639" class="changeCity"></icon>
-          <text>更改定位</text>
-        </view>
+        <view class="thisCityName" style="font-size:50rpx;">{{location}}{{county}}</view>
+        <image class="thisIcon" src="../../images/img/index/position.png"></image>
       </view>
     </view>
   </view>
-  <view class="navigateTitle">时间日历</view>
-  <calendar></calendar>
   <view class="navigateTitle">天气信息</view>
   <view class="bgwrap" bindtap='gotoWeather'>
     <!--显示当天的天气信息-->
     <view class="info">
       <!--城市名称 当前日期-->
-      <view class="city">{{location}} ({{today}})</view>
-      <!--当天温度-->
-      <view class="temp">{{weatherData.tmp}}℃</view>
-      <!--其他描述-->
-      <view class="weather">
-        <view>{{weatherData.cond_txt}}</view>
-        <view>{{weatherData.wind_dir}}</view>
-        <view>{{weatherData.wind_sc}}</view>
-        <view>PM2.5: {{air.pm25}}</view>
-        <view>{{air.qlty}}</view>
+      <!-- <view class="city">{{location}} ({{today}})</view> -->
+      <view class="locationContent">
+        <image class="locationLogo" src="../../images/img/index/wheather.png"></image>
+        <!--当天温度-->
+        <view class="weatherContent">
+          <view class="temp">{{weatherData.tmp}}℃</view>
+          <view class="weather">
+            <view>{{weatherData.cond_txt}}</view>
+            <view>{{weatherData.wind_dir}}</view>
+            <view>{{weatherData.wind_sc}}</view>
+            <view>PM2.5: {{air.pm25}}</view>
+            <view>{{air.qlty}}</view>
+          </view>
+        </view>
       </view>
+      <!--其他描述-->
       <view class="life" style='text-indent:1em;'>{{dress.txt}}</view>
     </view>
+  </view>
+  <view class="navigateTitle">时间日历</view>
+  <view class="bgwrap">
+  <view wx:if="{{showDateSimple}}" bindtap='gotoSimpleDate'>
+    <view class="locationContent">
+      <image class="locationLogo" src="../../images/img/index/date.png"></image>
+      <view class="weatherContent">
+      <view class="dateTime">日期：{{thisDate}}</view>
+      <view class="dateTime">时间：{{thisTime}}</view>
+    </view>
+    </view>
+  </view>
+  <view wx:if="{{showDateDetail}}" bindtap='gotoDetailDate'>
+    <calendar
+      calendarConfig="{{calendarConfig}}"
+      bind:onTapDay="onTapDay"
+      bind:afterTapDay="afterTapDay"
+      bind:onSwipe="onSwipe"
+      bind:whenChangeWeek="whenChangeWeek"
+      bind:whenChangeMonth="whenChangeMonth"
+      bind:afterCalendarRender="afterCalendarRender"></calendar>
+  </view>
   </view>
   <!--显示电影信息-->
   <view class="navigateTitle">电影资讯</view>
