--- a/pages/more/xingzuo/xingzuo.wxss
+++ b/pages/more/xingzuo/xingzuo.wxss
@@ -31,19 +31,20 @@ page {
 }
 
 .xz-self {
+  width: 180rpx;
   display: inline-flex;
   flex-direction: column;
-  margin: 20rpx;
+  margin: 30rpx;
   box-shadow: 0 6rpx 10rpx 2rpx white; /* for Android */
   -webkit-box-shadow: 0px 3px 5px 1px white; /* for IOS */
 }
 
 .xz-img {
-  width: 200rpx;
-  height: 150rpx;
-  margin-bottom: 15rpx;
-  border-radius: 5%;
-  }
+  width: 100rpx;
+  height: 100rpx;
+  border-radius: 50%;
+  margin: 15rpx 36rpx;
+}
 
 .xz-title {
   font-size: 24rpx;
@@ -54,7 +55,6 @@ page {
   background-clip: text;
   color: transparent;
   margin-bottom: 5rpx;
-  
 }
 
 .title-menu {
