--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -2,7 +2,7 @@
 @import "../movies/movies.wxss";
 
 .customSwiper {
-  height: 320rpx;
+  height: 270rpx;
   position: relative;
 }
 
@@ -11,7 +11,7 @@
 }
 
 .banner {
-  height: 300px;
+  height: 250px;
   background-color: #ddd;
 }
 
@@ -187,10 +187,19 @@
   background-size: 100%;
 }
 
-/* .navigateTitle::after{
-  content: "";
-  border: 1rpx solid yellow;
-  transform: rotate(-30deg);
-  -ms-transform: rotate(-30deg);
-  -webkit-transform: rotate(-30deg);
-} */
+.locationContent {
+  display: flex;
+  flex-direction: row;
+  margin: 40rpx 20rpx;
+}
+
+.bottomBtn{
+  width: 200rpx;
+  height: 80rpx;
+  
+}
+
+button::after {
+  border: none;
+  font-size: 24rpx;
+}
